updated instagram handle

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
           
         
         <li>
-          <a href="https://www.instagram.com/schill.in.az" target="_blank" rel="noopener">
+          <a href="https://www.instagram.com/jenn_schilling" target="_blank" rel="noopener">
             <i class="fab fa-instagram big-icon"></i>
           </a>
         </li>
