--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
     
     <h1>biography</h1>
 
-    <p>jenn schilling is currently a data analyst in the university analytics and institutional research department at the university of arizona in tucson, arizona. prior to joining the university of arizona, jenn taught middle school for two and a half years. she also served as an ameriCorps vista, working in college access. before turning to education, Jenn spent four years working in industry as an operations research engineer in the supply chain at intel and then as a Statistician in the advertising and market research industry.</p>
+    <p>jenn schilling is currently a data analyst in the university analytics and institutional research department at the university of arizona in tucson, arizona. prior to joining the university of arizona, jenn taught middle school for two and a half years. she also served as an americorps vista, working in college access. before turning to education, jenn spent four years working in industry as an operations research engineer in the supply chain at intel and then as a Statistician in the advertising and market research industry.</p>
 <p>jenn is passionate about increasing access to and improving equity in education, stem fields, and the tech industry, and she believes strongly in the power of data and analytics to bring attention to inequities. jenn has worked on freelance projects in data visualization, including the 
 <a href="https://fafsachallenge.az.gov/dashboard" target="_blank" rel="noopener">arizona fafsa challenge dashboard</a>. jenn also enjoys teaching and sharing her knowledge on data literacy, data visualization, personal finance, math education, and personal development.</p>
 
