redirect to rudi website

--- a/rudi-website/index.html
+++ b/rudi-website/index.html
@@ -234,7 +234,7 @@
   
   <meta property="og:site_name" content="jenn schilling">
   <meta property="og:url" content="/rudi-website/">
-  <meta property="og:title" content="Posts | jenn schilling">
+  <meta property="og:title" content="Rise Up Development Initiative | jenn schilling">
   <meta property="og:description" content="personal website of jenn schilling, data scientist"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
@@ -255,7 +255,7 @@
 
 
 
-  <title>Posts | jenn schilling</title>
+  <title>Rise Up Development Initiative | jenn schilling</title>
 
 </head>
 
@@ -365,7 +365,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>Posts</h1>
+  <h1>Rise Up Development Initiative</h1>
 
   
 
@@ -375,6 +375,17 @@
 
 
 <div class="universal-wrapper">
+  
+  <div class="article-style"><html>
+  <head>
+    <title>https://jennschilling.me/rudi-website</title>
+    <link rel="canonical" href="https:/riseupdevelopmentinitiative.org"/>
+    <meta name="robots" content="noindex">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="refresh" content="0; url=https:/riseupdevelopmentinitiative.org"/>
+  </head>
+</html>
+</div>
   
 
   
