fixed rudi link take 2

--- a/rudi-website/index.html
+++ b/rudi-website/index.html
@@ -379,10 +379,10 @@
   <div class="article-style"><html>
   <head>
     <title>https://jennschilling.me/rudi-website</title>
-    <link rel="canonical" href="https://riseupdevelopmentinitiative.org"/>
+    <link rel="canonical" href="https://www.riseupdevelopmentinitiative.org"/>
     <meta name="robots" content="noindex">
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <meta http-equiv="refresh" content="0; url=https://riseupdevelopmentinitiative.org"/>
+    <meta http-equiv="refresh" content="0; url=https://www.riseupdevelopmentinitiative.org"/>
   </head>
 </html>
 </div>
